[package]
name = "zeromq_test"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

[dependencies]
capnp = "0.14"
ctrlc = "3.1.7"
prost = "0.7"
rand = "0.8"
spin_sleep = "1.0.0"
structopt = "0.3.21"
zmq = { version = "0.9", features = ["vendored"] }

[build-dependencies]
prost-build = "0.7"
capnpc = "0.14"
