[package]
name = "zeromq_test"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
capnp = "0.14"
ctrlc = "3.1.7"
prost = "0.7"
rand = "0.8"
raw_sync = "0.1"
shared_memory = "0.11.4"
spin_sleep = "1.0.0"
structopt = "0.3.21"
zmq = { git = "https://github.com/erickt/rust-zmq", rev = "eede4315e10eccddec4348561c42ded534e6001e", features = ["vendored"] }

[build-dependencies]
prost-build = "0.7"
capnpc = "0.14"
